--- a/index.html
+++ b/index.html
@@ -127,9 +127,14 @@ select, input, button {
 </div>
 
 <script>
+
+const BMR = 1550; // perusaineenvaihdunta kcal / päivä  
+  
 const foodsDB = {
-  kaurapuuro: 250,
-  leipa: 220,
+  kaurapuuro_banaani: 450,
+  kaurapuuro_piltti: 383,
+  ruisleipa: 96,
+  kauraleipa: 120,
   smoothie: 300,
   kanapasta: 600,
   salaatti: 350,
