--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@ select, input, button {
   justify-content: space-between;
   margin-top: 0.3rem;
 }
-.item button {
-  width: auto;
-}
 .locked {
   opacity: 0.6;
   pointer-events: none;
@@ -51,33 +48,13 @@ select, input, button {
   min-width: 90px;
   text-align: center;
 }
-.summary-box h4 {
-  margin: 0 0 0.3rem 0;
-}
-
-  .summary-box.positive {
-  background: #e6f4ea;
-  color: #1e6b3a;
-}
-
-.summary-box.negative {
-  background: #fbeaea;
-  color: #8a1f1f;
-}
-
-.summary-box.zero {
-  background: #eeeeee;
-  color: #333;
-}
-
-.summary-box.nodata {
-  background: #f5f5f5;
-  color: #777;
-  font-style: italic;
-}
-
+.summary-box.positive { background:#e6f4ea; color:#1e6b3a; }
+.summary-box.negative { background:#fbeaea; color:#8a1f1f; }
+.summary-box.zero { background:#eee; color:#333; }
+.summary-box.nodata { background:#f5f5f5; color:#777; font-style:italic; }
 </style>
 </head>
+
 <body>
 
 <h2>Ruokaseuranta</h2>
@@ -87,64 +64,50 @@ select, input, button {
 
 <div id="content">
 
-<div class="section" id="aamupala">
-  <h3>Aamupala</h3>
-  <div class="meal-controls">
-    <select id="aamupalaSelect">
-      <option value="">Valitse ruoka</option>
-      <option value="kaurapuuro">Kaurapuuro (250 kcal)</option>
-      <option value="leipa">Leipä + levite (220 kcal)</option>
-      <option value="smoothie">Smoothie (300 kcal)</option>
-    </select>
-    <button onclick="addFood('aamupala')">Lisää</button>
-  </div>
-  <div class="foods"></div>
-</div>
+<!-- ATERIAT -->
+<script>
+function mealSection(id, title, options) {
+  document.write(`
+  <div class="section" id="${id}">
+    <h3>${title}</h3>
+    <div class="meal-controls">
+      <select id="${id}Select">
+        <option value="">Valitse ruoka</option>
+        ${options}
+      </select>
+      <input type="number" id="${id}Grams" placeholder="g" style="width:70px">
+      <button onclick="addFood('${id}')">Lisää</button>
+    </div>
+    <div class="foods"></div>
+  </div>`);
+}
+</script>
 
-<div class="section" id="lounas">
-  <h3>Lounas</h3>
-  <div class="meal-controls">
-    <select id="lounasSelect">
-      <option value="">Valitse ruoka</option>
-      <option value="kanapasta">Kanapasta (600 kcal)</option>
-      <option value="salaatti">Salaatti + proteiini (350 kcal)</option>
-    </select>
-    <button onclick="addFood('lounas')">Lisää</button>
-  </div>
-  <div class="foods"></div>
-</div>
+<script>
+mealSection("aamupala","Aamupala",`
+<option value="kaurapuuro">Kaurapuuro</option>
+<option value="leipa">Leipä</option>
+<option value="smoothie">Smoothie</option>`);
 
-<div class="section" id="illallinen">
-  <h3>Illallinen</h3>
-  <div class="meal-controls">
-    <select id="illallinenSelect">
-      <option value="">Valitse ruoka</option>
-      <option value="kanapasta">Kanapasta (600 kcal)</option>
-      <option value="salaatti">Salaatti + proteiini (350 kcal)</option>
-    </select>
-    <button onclick="addFood('illallinen')">Lisää</button>
-  </div>
-  <div class="foods"></div>
-</div>
+mealSection("lounas","Lounas",`
+<option value="kanapasta">Kanapasta</option>
+<option value="salaatti">Salaatti</option>`);
 
-<div class="section" id="iltapala">
-  <h3>Iltapala</h3>
-  <div class="meal-controls">
-    <select id="iltapalaSelect">
-      <option value="">Valitse ruoka</option>
-      <option value="rahka">Rahka (200 kcal)</option>
-      <option value="leipa">Leipä + levite (220 kcal)</option>
-    </select>
-    <button onclick="addFood('iltapala')">Lisää</button>
-  </div>
-  <div class="foods"></div>
-</div>
+mealSection("illallinen","Illallinen",`
+<option value="kanapasta">Kanapasta</option>
+<option value="salaatti">Salaatti</option>`);
 
+mealSection("iltapala","Iltapala",`
+<option value="rahka">Rahka</option>
+<option value="leipa">Leipä</option>`);
+</script>
+
+<!-- TREENIT -->
 <div class="section">
   <h3>Treenit</h3>
   <div class="training-controls">
-    <input type="text" id="trainingName" placeholder="Treenin nimi">
-    <input type="number" id="trainingKcal" placeholder="kcal">
+    <input id="trainingName" placeholder="Treenin nimi">
+    <input id="trainingKcal" type="number" placeholder="kcal">
     <button onclick="addTraining()">Lisää</button>
   </div>
   <div id="trainings"></div>
@@ -161,172 +124,139 @@ select, input, button {
 </div>
 
 <script>
-const BMR = 1550;
+const BMR = 2000;
 
+// kcal / 100 g
 const foodsDB = {
-  kaurapuuro: 250,
-  leipa: 220,
-  smoothie: 300,
-  kanapasta: 600,
-  salaatti: 350,
-  rahka: 200
+  kaurapuuro: 60,
+  leipa: 240,
+  smoothie: 70,
+  kanapasta: 160,
+  salaatti: 80,
+  rahka: 60
 };
 
 let dayData;
 let isLocked = false;
 
 function emptyDay() {
-  return {
-    foods: { aamupala: [], lounas: [], illallinen: [], iltapala: [] },
-    trainings: []
-  };
+  return { foods:{aamupala:[],lounas:[],illallinen:[],iltapala:[]}, trainings:[] };
 }
 
 function addFood(meal) {
   if (isLocked) return;
-  const select = document.getElementById(meal + "Select");
-  if (!select.value) return;
-  dayData.foods[meal].push(select.value);
-  select.value = "";
-  saveDraft();
-  render();
-}
+  const sel = document.getElementById(meal+"Select");
+  const grams = document.getElementById(meal+"Grams");
+  if (!sel.value || !grams.value) return;
 
-function removeFood(meal, i) {
-  if (isLocked) return;
-  dayData.foods[meal].splice(i, 1);
-  saveDraft();
-  render();
-}
-
-function addTraining() {
-  if (isLocked) return;
-  if (!trainingName.value || !trainingKcal.value) return;
-  dayData.trainings.push({
-    name: trainingName.value,
-    kcal: Number(trainingKcal.value)
+  dayData.foods[meal].push({
+    id: sel.value,
+    grams: Number(grams.value)
   });
-  trainingName.value = "";
-  trainingKcal.value = "";
+
+  sel.value = "";
+  grams.value = "";
   saveDraft();
   render();
 }
 
-function removeTraining(i) {
-  if (isLocked) return;
-  dayData.trainings.splice(i, 1);
-  saveDraft();
-  render();
+function removeFood(meal,i){
+  if(isLocked) return;
+  dayData.foods[meal].splice(i,1);
+  saveDraft(); render();
 }
 
-function render() {
-  for (let meal in dayData.foods) {
-    const box = document.querySelector(`#${meal} .foods`);
-    box.innerHTML = "";
-    dayData.foods[meal].forEach((f, i) => {
-      box.innerHTML += `
-        <div class="item">
-          ${f} (${foodsDB[f]} kcal)
-          <button onclick="removeFood('${meal}',${i})">❌</button>
-        </div>`;
+function addTraining(){
+  if(isLocked) return;
+  if(!trainingName.value||!trainingKcal.value) return;
+  dayData.trainings.push({name:trainingName.value,kcal:+trainingKcal.value});
+  trainingName.value=""; trainingKcal.value="";
+  saveDraft(); render();
+}
+
+function removeTraining(i){
+  if(isLocked) return;
+  dayData.trainings.splice(i,1);
+  saveDraft(); render();
+}
+
+function foodKcal(item){
+  return Math.round(item.grams * foodsDB[item.id] / 100);
+}
+
+function render(){
+  for(let meal in dayData.foods){
+    const box=document.querySelector(`#${meal} .foods`);
+    box.innerHTML="";
+    dayData.foods[meal].forEach((f,i)=>{
+      box.innerHTML+=`
+      <div class="item">
+        ${f.id} ${f.grams} g (${foodKcal(f)} kcal)
+        <button onclick="removeFood('${meal}',${i})">❌</button>
+      </div>`;
     });
   }
 
-  trainings.innerHTML = "";
-  dayData.trainings.forEach((t, i) => {
-    trainings.innerHTML += `
-      <div class="item">
-        ${t.name} (${t.kcal} kcal)
-        <button onclick="removeTraining(${i})">❌</button>
-      </div>`;
+  trainings.innerHTML="";
+  dayData.trainings.forEach((t,i)=>{
+    trainings.innerHTML+=`
+    <div class="item">
+      ${t.name} (${t.kcal} kcal)
+      <button onclick="removeTraining(${i})">❌</button>
+    </div>`;
   });
 
-  let foodKcal = 0;
-  Object.values(dayData.foods).flat().forEach(f => foodKcal += foodsDB[f]);
-  let trainKcal = dayData.trainings.reduce((s, t) => s + t.kcal, 0);
-  let net = foodKcal - (BMR + trainKcal);
+  let food=0;
+  Object.values(dayData.foods).flat().forEach(f=>food+=foodKcal(f));
+  let train=dayData.trainings.reduce((s,t)=>s+t.kcal,0);
+  let net=food-(BMR+train);
 
-  summary.innerHTML = `
-    Ruoasta: ${foodKcal} kcal<br>
-    Perusaineenvaihdunta: ${BMR} kcal<br>
-    Treeneistä: ${trainKcal} kcal<br><br>
-    <strong>Netto: ${net} kcal</strong>
-  `;
+  summary.innerHTML=`
+  Ruoasta: ${food} kcal<br>
+  Perusaineenvaihdunta: ${BMR} kcal<br>
+  Treeneistä: ${train} kcal<br><br>
+  <strong>Netto: ${net} kcal</strong>`;
 
   renderFiveDaySummary();
 }
 
-function renderFiveDaySummary() {
-  let html = `<h3>5 päivän koonti</h3><div class="summary-boxes">`;
-  let total = 0;
+function renderFiveDaySummary(){
+  let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`;
+  let total=0;
 
-  for (let i = 1; i <= 5; i++) {
-    const d = new Date(date.value);
-    d.setDate(d.getDate() - i);
-    const key = d.toISOString().split("T")[0];
-    const stored = localStorage.getItem(key);
-
-    if (stored) {
-      const data = JSON.parse(stored);
-      let food = 0;
-      Object.values(data.foods).flat().forEach(f => food += foodsDB[f]);
-      let train = data.trainings.reduce((s, t) => s + t.kcal, 0);
-      let net = food - (BMR + train);
-      total += net;
-
-      let cls = "zero";
-      if (net > 0) cls = "positive";
-      else if (net < 0) cls = "negative";
-
-      html += `
-        <div class="summary-box ${cls}">
-          <h4>-${i}</h4>
-          ${net} kcal
-        </div>`;
+  for(let i=1;i<=5;i++){
+    const d=new Date(date.value); d.setDate(d.getDate()-i);
+    const key=d.toISOString().split("T")[0];
+    const s=localStorage.getItem(key);
+    if(s){
+      const data=JSON.parse(s);
+      let food=0;
+      Object.values(data.foods).flat().forEach(f=>food+=foodKcal(f));
+      let train=data.trainings.reduce((s,t)=>s+t.kcal,0);
+      let net=food-(BMR+train);
+      total+=net;
+      html+=`<div class="summary-box ${net>0?"positive":net<0?"negative":"zero"}"><h4>-${i}</h4>${net} kcal</div>`;
     } else {
-      html += `
-        <div class="summary-box nodata">
-          <h4>-${i}</h4>
-          Ei dataa
-        </div>`;
+      html+=`<div class="summary-box nodata"><h4>-${i}</h4>Ei dataa</div>`;
     }
   }
-
-  html += `</div><br><strong>Yhteensä: ${total} kcal</strong>`;
-  fiveDaySummary.innerHTML = html;
+  html+=`</div><br><strong>Yhteensä: ${total} kcal</strong>`;
+  fiveDaySummary.innerHTML=html;
 }
 
-
-function saveDraft() {
-  localStorage.setItem("draft-" + date.value, JSON.stringify(dayData));
+function saveDraft(){ localStorage.setItem("draft-"+date.value,JSON.stringify(dayData)); }
+function saveDay(){
+  if(!date.value) return;
+  localStorage.setItem(date.value,JSON.stringify(dayData));
+  localStorage.removeItem("draft-"+date.value);
+  isLocked=true; content.classList.add("locked"); saveBtn.style.display="none";
 }
 
-function saveDay() {
-  if (!date.value) return;
-  localStorage.setItem(date.value, JSON.stringify(dayData));
-  localStorage.removeItem("draft-" + date.value);
-  lockDay();
-}
-
-function lockDay() {
-  isLocked = true;
-  content.classList.add("locked");
-  saveBtn.style.display = "none";
-}
-
-date.addEventListener("change", () => {
-  const final = localStorage.getItem(date.value);
-  const draft = localStorage.getItem("draft-" + date.value);
-
-  if (final) {
-    dayData = JSON.parse(final);
-    lockDay();
-  } else {
-    isLocked = false;
-    content.classList.remove("locked");
-    saveBtn.style.display = "block";
-    dayData = draft ? JSON.parse(draft) : emptyDay();
-  }
+date.addEventListener("change",()=>{
+  const f=localStorage.getItem(date.value);
+  const d=localStorage.getItem("draft-"+date.value);
+  if(f){ dayData=JSON.parse(f); isLocked=true; content.classList.add("locked"); saveBtn.style.display="none"; }
+  else { isLocked=false; content.classList.remove("locked"); saveBtn.style.display="block"; dayData=d?JSON.parse(d):emptyDay(); }
   render();
 });
 </script>
